src/objects/KS_Fusion__c.object
<CustomObject>
    <fields>
        <fullName>KS_Acc_Actividad__c</fullName>
        <label>KS_Acc_Actividad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Calle__c</fullName>
        <label>KS_Acc_Calle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Canal__c</fullName>
        <label>KS_Acc_Canal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Ciudad__c</fullName>
        <label>KS_Acc_Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Codigo_Postal__c</fullName>
        <label>KS_Acc_Codigo_Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Correo__c</fullName>
        <label>KS_Acc_Correo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Estado_Provincia__c</fullName>
        <label>KS_Acc_Estado_Provincia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Pais__c</fullName>
        <label>KS_Acc_Pais</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Sector__c</fullName>
        <label>KS_Acc_Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Subactividad__c</fullName>
        <label>KS_Acc_Subactividad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Telefono_2__c</fullName>
        <label>KS_Acc_Telefono_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Telefono_3__c</fullName>
        <label>KS_Acc_Telefono_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Acc_Telefono__c</fullName>
        <label>KS_Acc_Telefono</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Accion__c</fullName>
        <label>KS_Accion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MERGE</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Ctc_Calle__c</fullName>
        <label>KS_Ctc_Calle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Cargo__c</fullName>
        <label>KS_Ctc_Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Ciudad__c</fullName>
        <label>KS_Ctc_Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Codigo_Postal__c</fullName>
        <label>KS_Ctc_Codigo_Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Correo__c</fullName>
        <label>KS_Ctc_Correo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Estado_Provincia__c</fullName>
        <label>KS_Ctc_Estado_Provincia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Funcion_en_empresa__c</fullName>
        <label>KS_Ctc_Funcion_en_empresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Idioma__c</fullName>
        <label>KS_Ctc_Idioma</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Movil__c</fullName>
        <label>KS_Ctc_Movil</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Pais__c</fullName>
        <label>KS_Ctc_Pais</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Telefono_Particular__c</fullName>
        <label>KS_Ctc_Telefono_Particular</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ctc_Telefono__c</fullName>
        <label>KS_Ctc_Telefono</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Force_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KS_Force_Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Id_Duplicado_2__c</fullName>
        <label>KS_Id_Duplicado_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_Duplicado__c</fullName>
        <label>KS_Id_Duplicado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_Principal__c</fullName>
        <label>KS_Id_Principal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Tipo__c</fullName>
        <label>KS_Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>CONTACT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fusion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KS_Accion__c</columns>
        <columns>KS_Tipo__c</columns>
        <columns>KS_Id_Principal__c</columns>
        <columns>KS_Id_Duplicado__c</columns>
        <columns>KS_Id_Duplicado_2__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>KS_Acc_Calle__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Fusion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fusiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>